tests/NormalTests/paczka1/fuzzy1/43434836.err
Error in line 21: JkDqd0 A847 33,8
Error in line 22: JkDqd0 A393 81,0
Error in line 23: qeOP A393 83,8
Error in line 24: JkDqd0 S877 30,0
Error in line 25: YLrf A847 79,6
Error in line 35: qeOP S877 -1,5
Error in line 36: UkTVJQ S877 33,3
